<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_linear_publicacion_entrada">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_entrada_publicacion"
        android:textSize="@dimen/text_size_titulo_entrada_publicacion"
        android:id="@+id/txtTituloEntradaPublicacion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo_entrada"
        android:id="@+id/edtTitulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor_entrada_publicacion"
        android:textSize="@dimen/text_size_autor_entrada_publicacion"
        android:id="@+id/txtAutorEntradaPublicacion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_autor_entrada"
        android:id="@+id/edtAutor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido_entrada_publicacion"
        android:textSize="@dimen/text_size_contenido_entrada_publicacion"
        android:id="@+id/txtContenidoEntradaPublicacion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="10"
        android:gravity="top"
        android:hint="@string/hint_contenido_entrada"
        android:id="@+id/edtContenido" />

</LinearLayout>