<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_linear_elemento_listado"
    android:id="@+id/linearElementoListaEntradas">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_entrada_listado"
            android:textSize="@dimen/text_size_titulo_entrada_listado"
            android:id="@+id/txtTituloEntradaListado"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_entrada_listado"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_fecha_entrada_listado"
            android:id="@+id/txtFechaEntradaListado"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor_entrada_listado"
        android:textSize="@dimen/text_size_autor_entrada_listado"
        android:id="@+id/txtAutorEntradaListado"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contenido de entrada"
        android:id="@+id/txtContenidoEntradaListado"/>

</LinearLayout>